--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'net.dv8tion', name: 'JDA', version: '4.1.1_136'
+    implementation group: 'net.dv8tion', name: 'JDA', version: '4.2.0_222'
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     implementation group: 'org.jsoup', name:'jsoup', version: '1.12.1'
-    implementation group: 'com.jagrosh', name:'jda-utilities', version: '3.0.3'
-    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.47'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
-    implementation group: 'me.duncte123', name: 'botCommons', version: '1.0.83'
-    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.0-rc-3'
+    implementation group: 'com.jagrosh', name:'jda-utilities', version: '3.0.5'
+    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.61'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
+    implementation group: 'me.duncte123', name: 'botCommons', version: '2.0.122'
+    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.6'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 
 }
